revert docker file